--- a/src/sections/Contacts.module.scss
+++ b/src/sections/Contacts.module.scss
@@ -38,7 +38,7 @@ $input-color: color-mix(in srgb, var(--text) 60%, black 40%);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 30px;
+    gap: 24px;
 
     background-color: color-mix(in srgb, var(--bg) 90%, var(--mixing-color) 10%);
 
